--- a/index.html
+++ b/index.html
@@ -8,14 +8,23 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
+
+		<div class="topnav">
+							<a href="index.html">Home</a>
+							<a href="#main">About Me</a>
+							<a href="#projects">Projects</a>
+							<a href="Resume - Norman A Toro Vega.pdf">Resume</a>
+							<a href="#footer">Contact</a>
+		  </div>
+
 		<!-- Wrapper -->
 			<div id="wrapper">
-
+				<div class="col-12"><span class="image fit"><img src="images/banner.jpeg" alt="" /></span></div>
 				<!-- Header -->
 					<header id="header">
 						<div class="inner">
 
-							<div class="col-12"><span class="image fit"><img src="images/banner.jpeg" alt="" /></span></div>
+							
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
@@ -41,7 +50,7 @@
 							<li><a href="#main">About Me</a></li>
 							<li><a href="#projects">Projects</a></li>
 							<li><a href="Resume - Norman A Toro Vega.pdf">Resume</a></li>
-							<li><a href="#footer">Contact Me!</a></li>
+							<li><a href="#footer">Contact</a></li>
 						</ul>
 					</nav>
 
@@ -50,7 +59,7 @@
 						<div class="inner">
 							<header>
 								<h1>Hi, I'm Norman! Passionate Product Leader, Software Developer, and Innovator.</h1>
-								<!-- <p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p> -->
+								<p>Exploring the future of technology in Mobile Applications, Research, Education and Online Government.</p>
 							</header>
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/normant/" class="icon brands style2 fa-linkedin"><span class="label">Linkedin</span></a></li>
