--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Hi, I'm Norman! Passionate Product Leader, Software Developer, and Innovator.</h1>
+								<h1>Hi, I'm Norman! 🚀 Passionate Product Leader, Software Developer, and Innovator. 🌟</h1>
+								<p>I study Computer Engineering and Technology Innovation and am passionate about product development in mobile applications, education, research, and online government.</p>
 								<!-- <p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p> -->
 							</header>
 							<ul class="icons">
@@ -69,7 +70,7 @@
 									<a>
 										<h2>Spark! Innovation Fellowship: My Science Guide</h2>
 										<div class="content">
-											<p>Founder & Product Lead of the first Research Mentorship Platform for Latin America.</p>
+											<p>Founder & Product Lead of the first Research Mentorship Platform for Latin America <br><br>(Case Study Coming Soon)</p>
 										</div>
 									</a>
 								</article>
@@ -81,7 +82,7 @@
 									<a>
 										<h2>Puerto Rico Digital Transformation</h2>
 										<div class="content">
-											<p>Developed Innovative Solutions for Puerto Rico's Online Government Platform</p>
+											<p>Developed Innovative Solutions for Puerto Rico's Online Government Platform <br><br>(Case Study Coming Soon)</p>
 										</div>
 									</a>
 								</article>
@@ -93,7 +94,7 @@
 									<a>
 										<h2>Intel International Science & Engineering Fair</h2>
 										<div class="content">
-											<p>Two-time Finalist at the World's Most Prestigious Science Fair Competition</p>
+											<p>Two-time Finalist at the World's Most Prestigious Science Fair Competition <br><br>(Case Study Coming Soon)</p>
 										</div>
 									</a>
 								</article>
@@ -160,7 +161,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Norman A. Toro Vega</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Norman A. Toro Vega</li><li>Design Inspiration: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
