--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <body>
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow">
-                <a class="navbar-brand" href="#">Norman A. Toro Vega</a>
+                <a class="navbar-brand" href="/">Norman A. Toro Vega</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="Resume - Norman A Toro Vega.pdf">Resume</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About + Connect</a>
+                        <a class="nav-link" href="about.html">About + Connect</a>
                     </li>
                 </ul>
             </div>
@@ -48,10 +48,17 @@
 
         <!-- Page Container -->
             <!-- Banner Image -->
-            <div class="hero-image">
+            <div class="hero-image" id="imageimage">
                 <div class="hero-text">
                     <h1>Hi! I'm Norman! 🚀</h1>
                     <h1>Passionate Product Leader, Software Developer, and Innovator. 🌟</h1>
+                </div>
+                <div class="mobileSocialLinks" style="text-align: center;" id="mobileSocialLinks">
+                    <a href="mailto:normant@bu.edu" id="mail"><span class="fas fa-envelope fa-2x"></span></a>
+                    <a href="https://www.linkedin.com/in/normant/" id="linkedin"><span class="fab fa-linkedin fa-2x"></span></a>
+                    <a href="https://www.twitter.com/normant_" id="twitter"><span class="fab fa-twitter fa-2x"></span></a>
+                    <a href="https://www.github.com/normantv" id="github"><span class="fab fa-github fa-2x"></span></a>
+                    <a href="https://dribbble.com/normant_" id="dribbble"><span class="fab fa-dribbble fa-2x"></span></a>
                 </div>
             </div>
 
@@ -61,30 +68,30 @@
                     <div class="card shadow" style="background-color: black !important;">
                         <img class="card-img-top" src="images/spark-logo-square.png" alt="Spark! Fellowship Logo">
                         <div class="card-body container-fluid" style="display: flex;">
-                            <div class="row" style="align-items: center;">
-                                <h5 class="card-title col-md-9" style="color: white;">Spark! Innovation Fellowship</h5>
+                            <div class="row" style="align-items: flex-end;">
+                                <h5 class="card-title" style="color: white; width: 60%; margin: 5%;">Spark! Innovation Fellowship</h5>
                                 <a href="#" class="stretched-link"></a>
-                                <span class="fas fa-arrow-circle-right fa-2x col-sm" style="color: white;"></span>
+                                <span class="fas fa-arrow-circle-right fa-2x col-sm" style="color: white; width: 20%; margin-left: 10%;"></span>
                             </div>
                         </div>
                     </div>
                     <div class="card shadow">
                         <img class="card-img-top" src="images/pr-logo-square.jpeg" alt="Puerto Rico Logo">
                         <div class="card-body container-fluid" style="display: flex;">
-                            <div class="row" style="align-items: center;">
-                                <h5 class="card-title col-md-9">Puerto Rico's Digital Transformation</h5>
+                            <div class="row" style="align-items: flex-end;">
+                                <h5 class="card-title" style="color: black; width: 65%; margin: 5%;">Puerto Rico Digital Transformation</h5>
                                 <a href="#" class="stretched-link"></a>
-                                <span class="fas fa-arrow-circle-right fa-2x col-sm" style="color: black;"></span>
+                                <span class="fas fa-arrow-circle-right fa-2x col-sm" style="color: black; width: 20%; margin-left: 5%;"></span>
                             </div>
                         </div>
                     </div>
                     <div class="card shadow">
                         <img class="card-img-top" src="images/isef-logo-square.png" alt="ISEF Logo">
                         <div class="card-body container-fluid" style="display: flex;">
-                            <div class="row" style="align-items: center;">
-                                <h5 class="card-title col-md-9">Intel International Science & Engineering Fair</h5>
+                            <div class="row" style="align-items: flex-end;">
+                                <h5 class="card-title" style="color: black; width: 65%; margin: 5%;">Intel International Science & Engineering Fair</h5>
                                 <a href="#" class="stretched-link"></a>
-                                <span class="fas fa-arrow-circle-right fa-2x col-sm" style="color: black;"></span>
+                                <span class="fas fa-arrow-circle-right fa-2x col-sm" style="color: black; width: 20%; margin-left: 5%;"></span>
                             </div>
                         </div>
                     </div>
@@ -92,7 +99,7 @@
             </div>
             
             <!-- Footer -->
-            <div class="column"" id="footer">
+            <div class="column" id="DesktopFooter">
                 <div style="text-align: center;">
                     <h1>Let's Connect!</h1>
                 </div>
@@ -109,6 +116,15 @@
                     <h1>Get In Touch</h1>
                 </div>
             </div>
-
+        <div class="column" id="MobileFooter">
+            <div style="text-align: left;">
+                <h1>Let's Chat!</h1>
+                <h6>Feel free to connect and chat with me through any of the following:</h6>
+                <div>LINKS UP SOON :)</div>
+            </div>
+            <div style="text-align: center;">
+                <div style="color: rgba(0, 0, 0, 0.2); font-size: 0.75em; margin-top: 10%;">© Norman A. Toro Vega | 2020</div>
+            </div>
+        </div>
     </body>
 </html>
