Homepage Design FIxes

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
                         <img class="card-img-top" src="images/me-square.jpeg" alt="Picture of Me">
                         <div class="card-body container-fluid" style="display: flex;">
                             <div class="row" style="align-items: flex-end;">
-                                <h5 class="card-title" style="color: black; width: 65%; margin: 5%;">Learn more about me 👨🏻‍💻</h5>
+                                <h5 class="card-title" style="color: black; width: 50%; margin: 5%; margin-right: 15%;">Learn more about me 👨🏻‍💻</h5>
                                 <a href="about.html" class="stretched-link"></a>
-                                <span class="fas fa-arrow-circle-right fa-2x col-sm" style="color: black; width: 20%; margin-left: 5%;"></span>
+                                <span class="fas fa-arrow-circle-right fa-2x col-sm" style="color: black; width: 20%; margin-left: 10%;"></span>
                             </div>
                         </div>
                     </div>
@@ -147,7 +147,7 @@
                 <a href="https://dribbble.com/normant_" id="dribbble"><span class="fab fa-dribbble fa-2x"></span></a>
             </div>
 
-            <a href="mailto:normant@bu.edu">
+            <a href="mailto:normant@bu.edu" id="DesktopFooterLink">
                 <div class="footerCard shadow" style="text-align: center;">
                     <h1>Email Me</h1>
                 </div>
