Splash Page for Case Study #1

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <!-- Banner Image -->
                 <div class="hero-image">
                     <div class="hero-text">
-                        <h1>Hi! I'm Norman! 🚀<br>Passionate Product Leader, Software Developer, and Innovator. 🌟</h1>
+                        <h1>Hi! I'm Norman! 🚀<br>Passionate Product Manager, Software Developer, and Innovator. 🌟</h1>
                     </div>
                     <div class="mobileSocialLinks shadow" id=mobileSocialLinks>
                         <a href="mailto:normant@bu.edu" id="mail"><span class="fas fa-envelope fa-2x"></span></a>
@@ -71,7 +71,7 @@
                         <div class="card-body container-fluid" style="display: flex;">
                             <div class="row" style="align-items: flex-end;">
                                 <h5 class="card-title" style="color: white; width: 60%; margin: 5%;">Spark! Innovation Fellowship</h5>
-                                <a href="#" class="stretched-link"></a>
+                                <a href="my-science-guide.html" class="stretched-link"></a>
                                 <span class="fas fa-arrow-circle-right fa-2x col-sm" style="color: white; width: 20%; margin-left: 10%;"></span>
                             </div>
                         </div>
