Google Analytics Uploaded

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
     <!-- Information for browser -->
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-170686277-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+
+            gtag('config', 'UA-170686277-1');
+        </script>
+
         <title>Norman A. Toro Vega</title>
         <link rel="stylesheet" href="index.css" type="text/css">
 
@@ -71,7 +81,7 @@
                         <div class="card-body container-fluid" style="display: flex;">
                             <div class="row" style="align-items: flex-end;">
                                 <h5 class="card-title" style="color: white; width: 60%; margin: 5%;">Spark! Innovation Fellowship</h5>
-                                <a href="spark-case-study-draft.pdf" class="stretched-link"></a>
+                                <a href="my-science-guide.html" class="stretched-link"></a>
                                 <span class="fas fa-arrow-circle-right fa-2x col-sm" style="color: white; width: 20%; margin-left: 10%;"></span>
                             </div>
                         </div>
