--- a/about.html
+++ b/about.html
@@ -2,6 +2,16 @@
 <html>
     <!-- Information for browser -->
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-170686277-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+
+            gtag('config', 'UA-170686277-1');
+        </script>
+        
         <title>About Me - Norman A. Toro Vega</title>
         <link rel="stylesheet" href="about.css" type="text/css">
 
