Temporary PDF Uploaded

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <div class="card-body container-fluid" style="display: flex;">
                             <div class="row" style="align-items: flex-end;">
                                 <h5 class="card-title" style="color: white; width: 60%; margin: 5%;">Spark! Innovation Fellowship</h5>
-                                <a href="my-science-guide.html" class="stretched-link"></a>
+                                <a href="Case Study - Spark! Innovation Fellowship.pdf" class="stretched-link"></a>
                                 <span class="fas fa-arrow-circle-right fa-2x col-sm" style="color: white; width: 20%; margin-left: 10%;"></span>
                             </div>
                         </div>
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                     <div class="card shadow" id="aboutMeMobileCard">
-                        <img class="card-img-top" src="images/me-square.jpeg" alt="Picture of Me">
+                        <img class="card-img-top" src="images/picture-of-me-mobile.jpeg" alt="Picture of Me">
                         <div class="card-body container-fluid" style="display: flex;">
                             <div class="row" style="align-items: flex-end;">
                                 <h5 class="card-title" style="color: black; width: 50%; margin: 5%; margin-right: 15%;">Learn more about me 👨🏻‍💻</h5>
