Uploaded Case Study 1 :rocket:

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div class="card-body container-fluid" style="display: flex;">
                             <div class="row" style="align-items: flex-end;">
                                 <h5 class="card-title" style="color: white; width: 60%; margin: 5%;">Spark! Innovation Fellowship</h5>
-                                <a href="Case Study - Spark! Innovation Fellowship.pdf" class="stretched-link"></a>
+                                <a href="my-science-guide.html" class="stretched-link"></a>
                                 <span class="fas fa-arrow-circle-right fa-2x col-sm" style="color: white; width: 20%; margin-left: 10%;"></span>
                             </div>
                         </div>
