Youtube Link + Image Compression

--- a/my-science-guide.html
+++ b/my-science-guide.html
@@ -187,7 +187,7 @@
                 </div>
 
                 <!-- Should be a YouTube link! -->
-                <button class="button" onclick="window.location.href='https://www.facebook.com/nortorovega/videos/2949101798513139/'">Watch our pitch!</button>
+                <button class="button" onclick="window.location.href='https://youtu.be/bfdJ0d-ZU1g'">Watch our pitch!</button>
 
                 <button class="button" onclick="window.location.href='https://testflight.apple.com/join/vM0bHfKa'">Try the TestFlight App!</button>
 
@@ -220,7 +220,7 @@
 
                 <div class="row" style="margin-right: 10%; margin-left: 10%; display: flex; justify-content: center; flex-wrap: wrap;">
                 <!-- Should be a YouTube link! -->
-                    <button class="button" onclick="window.location.href='https://www.facebook.com/nortorovega/videos/2949101798513139/'">Watch our pitch!</button>
+                    <button class="button" onclick="window.location.href='https://youtu.be/bfdJ0d-ZU1g'">Watch our pitch!</button>
                     <button class="button" onclick="window.location.href='https://testflight.apple.com/join/vM0bHfKa'">Try the TestFlight App!</button>
                 </div>
                 
