--- a/my-science-guide.html
+++ b/my-science-guide.html
@@ -147,7 +147,7 @@
             </div>
             <br>
             <div class="sectionHeading" style="color: #EA3323;">Mockups</div>
-            <div class="sectionText">Many iterations of our app design were developed, with a 3-step sig- up process chosen as the final version. Bright colors were chosen to suit the high school student demographic. Each feature corresponded to a user story that provided value through the application.</div>
+            <div class="sectionText">Many iterations of our app design were developed, with a 3-step sign-up process chosen as the final version. Bright colors were chosen to suit the high school student demographic. Each feature corresponded to a user story that provided value through the application.</div>
             <img src="images/myscienceguide/Mockups.png" style="width: 100%;" alt="My Science Guide Mockups" class="mockups responsiveImage">
             <div class="sectionHeading" style="color: #EA3323;">Code Development</div>
             <div class="sectionText">My Science Guide was developed using React Native to cater to a diverse range of devices used in Latin America. I developed the Front- End of the application, working through different device sizes and requirements. Development was structured in weekly sprints, where each developer was tasked with implementing one user story into the application.</div>
