--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         </script>
 
         <title>Norman A. Toro Vega</title>
+        <meta name="description" content="Norman A. Toro Vega is an aspiring product manager, innovator, software developer and changemaker. Computer Engineering & Technology Innovation student at Boston University leading the next...">
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚀</text></svg>">
         <link rel="stylesheet" href="index.css" type="text/css">
 
