--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <div class="card-body container-fluid" style="display: flex;">
                             <div class="row" style="align-items: flex-end;">
                                 <h5 class="card-title" style="color: black; width: 65%; margin: 5%;">Puerto Rico Digital Transformation</h5>
-                                <a href="in-construction-sign.html" class="stretched-link"></a>
+                                <a href="puerto-rico-digital-transformation.html" class="stretched-link"></a>
                                 <span class="fas fa-arrow-circle-right fa-2x col-sm" style="color: black; width: 20%; margin-left: 5%;"></span>
                             </div>
                         </div>
