PRDT Layout Fixes

--- a/puerto-rico-digital-transformation.html
+++ b/puerto-rico-digital-transformation.html
@@ -79,15 +79,18 @@
             <div class="sectionText">To understand how to best transform a wide-array of government services and online offerings, I researched successful Digital Reform strategies used around the world and spoke on proposals about how these could be implemented in the island.
 <br><br>
 Specifically, I developed a case study on Colombia’s Digital Transformation initiative and studied how they were able to move their hundreds of transactions online. Colombia was an important location to study since it faced the same issue Puerto Rico faces, long lines to conduct transactions and little to no platforms for citizens to access services online.
-<img src="images/prits/PRGOV Header.png" style="margin-top: 5%" alt="Puerto Rico Background Image" class="responsiveImage">
+</div>
+<img src="images/prits/PRGOV Header.png" style="margin-top: 3%" alt="Puerto Rico Background Image" class="responsiveImage">
 <br>
+<div class="sectionText">
 I also envisioned a redesigned PR.GOV that would take Puerto Rico to the 21st century in terms of technological development. Collaborating hands-on the PRITS team, we worked with citizens, stakeholders, and policy teams to envision new ways of delivering online services.
 <br><br>
 These efforts are focused on providing an innovative way of doing governance that reduces the work that citizens have to go through to access basic and fundamental services. 
 <br><br>
-A major measure we pitched to officials was to move the hundreds of services offered in PR.GOV away from siloed agency lists and organize them by themes. Citizens wouldn’t need to know which of the over 100 agencies offered the specific service they were looking for.
-<img src="images/prits/Services Model.png" style="margin-top: 5%" alt="Puerto Rico Background Image" class="responsiveImage">
+A major measure we pitched to officials was to move the hundreds of services offered in PR.GOV away from siloed agency lists and organize them by themes. Citizens wouldn’t need to know which of the over 100 agencies offered the specific service they were looking for.</div>
+<img src="images/prits/Services Model.png" style="margin-top: 3%" alt="Puerto Rico Background Image" class="responsiveImage">
 <br>
+<div class="sectionText">
 Throughout the Summer I also developed UI concepts, Twilio SMS bots, and Python bots that will improve citizens’ access to services, data, and essential information while aiding in Puerto Rico's recovery and future developments by making it simpler to do business in the island. <br><br>
 Citizens will be able to access services, which they traditionally go to a physical location to process, through consistent online platforms that reduce the steps required to complete.</div>
 <br>
@@ -99,7 +102,7 @@ Citizens will be able to access services, which they traditionally go to a physi
 </div>
 <br>
 Our efforts were also highlighted by Metro Puerto Rico, a local newspaper, in an article presenting the Digital Transformation Initiative and the impact it will have on our island.</div>
-<button class="button" style="width: 50%" onclick="window.location.href='https://www.metro.pr/pr/noticias/2018/09/02/universitarios-contribuyen-transformacion-digital-del-gobierno.html'">Metro PR Article</button>
+<button class="button" style="width: 40%" onclick="window.location.href='https://www.metro.pr/pr/noticias/2018/09/02/universitarios-contribuyen-transformacion-digital-del-gobierno.html'">Metro PR Article</button>
 <br><br><br>
 
 <div class="sectionHeading" style="color: #00A2FF; font-size: .6em;">Confidentiality Note</div>
