--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <meta name="description" content="Norman A. Toro Vega is an aspiring product manager, innovator, software developer and changemaker. Computer Engineering & Technology Innovation student at Boston University leading the next...">
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚀</text></svg>">
         <link rel="stylesheet" href="index.css" type="text/css">
-        <meta property='og:image' content='images/my-science-guide.png'/>
+        <meta property='og:image' content='images/Memoji - WWDC.png'/>
 
         <!-- Keywords -->
         <meta name="author" content="Norman A. Toro Vega">
@@ -78,6 +78,11 @@
 
             <!-- Projects -->
             <div class="container" id="projects">
+                <div class="sectionHeading left">
+                    <h1>Experience</h1>
+                    <h6>From Science Research to Civic Tech to Educational Technology, I’m always looking for the next opportunity to make an impact in the world using technology! </h6>
+                </div>
+
                 <div class="row" style="justify-content: center;">
                     <div class="card shadow" style="background-color: black !important;">
                         <img class="card-img-top" src="images/spark-logo-square.png" alt="Spark! Fellowship Logo">
@@ -109,7 +114,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card shadow" id="aboutMeMobileCard">
+                    <!-- <div class="card shadow" id="aboutMeMobileCard">
                         <img class="card-img-top" src="images/picture-of-me-mobile.jpeg" alt="Picture of Me">
                         <div class="card-body container-fluid" style="display: flex;">
                             <div class="row" style="align-items: flex-end;">
@@ -117,6 +122,53 @@
                                 <a href="about.html" class="stretched-link"></a>
                                 <span class="fas fa-arrow-circle-right fa-2x col-sm" style="color: black; width: 20%; margin-left: 10%;"></span>
                             </div>
+                        </div>
+                    </div> -->
+                </div>
+
+                <div class="sectionHeading left">
+                    <h1>Skills & Expertise</h1>
+                    <h6>Engineer by day, I can code in Python and C++ while exploring Swift and Web Development.  Designer by night, I have an eye for simple and intuitive designs that customers will love.</h6>
+                </div>
+
+                <div class="row" style="justify-content: center;">
+                    <div class="square shadow" style="background-color: white;">
+                        <div class="squareContent">
+                            <img style="width: 100%;" src="images/highlight-skills.png" alt="I can code in Python, Swift, C++, SwiftUI, and doing web development.">
+                        </div>
+                    </div>
+                    <div class="square shadow" style="background-color: black;">
+                        <div class="squareContent">
+                            <img style="width: 100%;" src="images/memoji-code.png" alt="Memoji of me with a computer">
+                        </div>
+                    </div>
+                    <div class="square shadow" style="background-color: white ;">
+                        <div class="squareContent">
+                            <img style="width: 100%;" src="images/highlight-languages.png" alt="I can speak English, Spanish, and Portuguese">
+                        </div>
+                    </div>
+                    <div class="square shadow" style="background-color: black;">
+                        <div class="squareContent">
+                            <img style="width: 100%;" src="images/highlight-hobbies.png" alt="I can speak English, Spanish, and Portuguese">
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="sectionHeading left">
+                    <h1>Campus Involvement</h1>
+                    <h6>I love working to further my campus community. As Co-President of BUHPC, I lead workshops on code optimization. As SHPE PR Chair, I drive all brand and marketing efforts.</h6>
+                </div>
+                <div class="row" style="justify-content: center;">
+                    <div class="square shadow BUred">
+                        <div class="squareContent">
+                            <img style="width: 100%;" src="images/highlight-buhpc.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="square shadow SHPEblue">
+                        <div class="squareContent">
+                            <img style="width: 100%;" src="images/highlight-shpe.png" alt="">
                         </div>
                     </div>
                 </div>
