--- a/index.html
+++ b/index.html
@@ -146,14 +146,28 @@
                             <img style="width: 100%;" src="images/memoji-code.png" alt="Memoji of me with a computer">
                         </div>
                     </div>
-                    <div class="square shadow" style="background-color: white ;">
+
+                    <!-- Mobile Layout -->
+                    <div class="square shadow" style="background-color: white;" id="mobileSquare1">
                         <div class="squareContent">
                             <img style="width: 100%;" src="images/highlight-languages.png" alt="I can speak English, Spanish, and Portuguese">
                         </div>
                     </div>
-                    <div class="square shadow" style="background-color: black;">
+                    <div class="square shadow" style="background-color: black;" id="mobileSquare2">
                         <div class="squareContent">
-                            <img style="width: 100%;" src="images/highlight-hobbies.png" alt="I can speak English, Spanish, and Portuguese">
+                            <img style="width: 100%;" src="images/highlight-hobbies.png" alt="Hobbies? Foodie. Photographer. Booklover.">
+                        </div>
+                    </div>
+
+                    <!-- Desktop Layout -->
+                    <div class="square shadow" style="background-color: black;" id="desktopSquare1">
+                        <div class="squareContent">
+                            <img style="width: 100%;" src="images/highlight-hobbies.png" alt="Hobbies? Foodie. Photographer. Booklover.">
+                        </div>
+                    </div>
+                    <div class="square shadow" style="background-color: white;" id="desktopSquare2">
+                        <div class="squareContent">
+                            <img style="width: 100%;" src="images/highlight-languages.png" alt="I can speak English, Spanish, and Portuguese">
                         </div>
                     </div>
                 </div>
@@ -218,7 +232,7 @@
 
             <a href="mailto:normant@bu.edu" id="DesktopFooterLink">
                 <div class="footerCard shadow" style="text-align: center;">
-                    <h1>Email Me</h1>
+                    <h1>Say Hi!</h1>
                 </div>
             </a>
             
