--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <!-- OGP Tags -->
         <meta property='og:title' content='Norman A. Toro Vega'/>
-        <meta property='og:image' content='images/Memoji - WWDC.png'/>
+        <meta prefix="og: http://ogp.me/ns#" property='og:image' content='images/Memoji - WWDC.png'/>
         <meta property='og:description' content='Norman A. Toro Vega is an aspiring product manager, innovator, software developer and changemaker. Computer Engineering & Technology Innovation student at Boston University leading the next...'/>
 
         <!-- Browser -->
