--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
         <title>Norman A. Toro Vega</title>
         <meta name="description" content="Norman A. Toro Vega is an aspiring product manager, innovator, software developer and changemaker. Computer Engineering & Technology Innovation student at Boston University leading the next...">
+        <meta name="image" property="og:image" content="images/Memoji - WWDC.png">
         <meta name="author" content="Norman A. Toro Vega">
         <meta name="keywords" content="Technology, Innovation, Developer, Software Engineer, Product Manager">
 
@@ -23,7 +24,6 @@
 
         <!-- OGP Tags -->
         <meta property='og:title' content='Norman A. Toro Vega'/>
-        <meta prefix="og: http://ogp.me/ns#" property='og:image' content='images/Memoji - WWDC.png'/>
         <meta property='og:description' content='Norman A. Toro Vega is an aspiring product manager, innovator, software developer and changemaker. Computer Engineering & Technology Innovation student at Boston University leading the next...'/>
 
         <!-- Browser -->
