--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <title>Norman A. Toro Vega</title>
         <meta name="description" content="Norman A. Toro Vega is an aspiring product manager, innovator, software developer and changemaker. Computer Engineering & Technology Innovation student at Boston University leading the next...">
-        <meta name="image" property="og:image" content="images/Memoji - WWDC.png">
+        <meta name="image" property="og:image" content="images/Memoji - WWDC.jpg">
         <meta name="author" content="Norman A. Toro Vega">
         <meta name="keywords" content="Technology, Innovation, Developer, Software Engineer, Product Manager">
 
