--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 
 
     <script>
-        $("button").click(function () {
+        $("#bannerButton").click(function () {
             $('html,body').animate({
                 scrollTop: $(".jumpToScroll").offset().top-75
             },
