--- a/index.html
+++ b/index.html
@@ -244,14 +244,61 @@
                 </div>
             </div>
         </div>
+
+        <div class="sectionHeading left">
+            <h1>Achievements</h1>
+        </div>
+        <div class="row" style="justify-content: center;">
+            <div class="rectangle black">
+                <div class="rectangleIcon shadow">
+                    💻
+                </div>
+
+                <div class="rectangleContent">
+                    <b>Intel Excellence in Computer Science Award.</b> Most outstanding Science Fair Project at the Puerto Rico Science Fair.
+                </div>
+            </div>
+
+            <div class="rectangle black">
+                <div class="rectangleIcon shadow">
+                    📚
+                </div>
+
+                <div class="rectangleContent">
+                    <b>Hispanic Scholarship Fund Scholar.</b> Recognition awarded to Latino students who have made significant contributions to their Hispanic communities and their fields of study.
+                </div>
+            </div>
+
+            <div class="rectangle black">
+                <div class="rectangleIcon shadow">
+                    🔬
+                </div>
+
+                <div class="rectangleContent">
+                    <b>Edwards Lifesciences Scholar.</b> Selected as 1 out of 10 scholars on the basis of academic record and demonstrated leadership in school and community activities.
+                </div>
+            </div>
+
+            <div class="rectangle black">
+                <div class="rectangleIcon shadow">
+                    🇵🇷
+                </div>
+
+                <div class="rectangleContent">
+                    <b>Kinesis Scholar.</b> Prestigious scholarship given to high-achieving Puerto Rican students who are pursuing an undergraduate degree at one of the top 100 universities in the US.
+                </div>
+            </div>
+
+
+        </div>
     </div>
 
 
     <!-- Footer -->
     <div class="column" id="MobileFooter">
         <div style="text-align: left;">
-            <h1>Let's Chat! 📱</h1>
-            <h6>Feel free to connect and chat with me through any of the following:</h6>
+            <h1 style=" margin-left: 3%;">Let's Chat! 📱</h1>
+            <h6 style=" margin-left: 3%;">Feel free to connect and chat with me through any of the following:</h6>
             <a href="mailto:normant@bu.edu">
                 <div class="footerCard shadow" id="emailFooterCard">
                     Email
