Uploaded Slide Deck

--- a/about.html
+++ b/about.html
@@ -50,6 +50,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="Resume - Norman A Toro Vega.pdf">Resume</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Slide Deck.pdf">Slide Deck</a>
+                    </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="about.html">About + Connect</a>
                     </li>
