--- a/in-construction-sign.html
+++ b/in-construction-sign.html
@@ -41,6 +41,9 @@
                         <a class="nav-link" href="Resume - Norman A Toro Vega.pdf">Resume</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="Slide Deck.pdf">Slide Deck</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="about.html">About + Connect</a>
                     </li>
                 </ul>
