--- a/about.html
+++ b/about.html
@@ -87,7 +87,14 @@
                 <a href="https://dribbble.com/normant_" id="dribbble"><span class="fab fa-dribbble fa-2x"></span></a>
             </div>
 
-            <button class="resumeButton" onclick="window.location.href='Resume - Norman A Toro Vega.pdf'">See Resume</button>
+            <div class="row" style="justify-content: center;">
+                <button class="resumeButton" onclick="window.location.href='Resume - Norman A Toro Vega.pdf'">See Resume</button>
+                <!-- Calendly link widget begin -->
+                <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+                <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
+                <a class="resumeButton" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/normant/60-minute'});return false;">Schedule Chat</a>
+                <!-- Calendly link widget end -->
+            </div>
 
             <div class="copyright">© Norman A. Toro Vega | 2020</div>
         </div>
@@ -120,7 +127,15 @@
                     <a href="https://dribbble.com/normant_" id="dribbble"><span class="fab fa-dribbble fa-2x"></span></a>
                 </div>
 
-                <button class="resumeButton" onclick="window.location.href='Resume - Norman A Toro Vega.pdf'">See Resume</button>
+                <div class="row">
+                    <button class="resumeButton" onclick="window.location.href='Resume - Norman A Toro Vega.pdf'">See Resume</button>
+                    <!-- Calendly link widget begin -->
+                    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+                    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
+                    <a class="resumeButton" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/normant/60-minute'});return false;">Schedule time with me</a>
+                    <!-- Calendly link widget end -->
+                </div>
+                
             </div>
 
             
