--- a/ISEF.html
+++ b/ISEF.html
@@ -84,14 +84,14 @@
                 <!-- The slideshow -->
                 <div class="carousel-inner" style="padding-bottom:95px;">
                   <div class="carousel-item active"">
-                    <img style="width: 50%; margin: auto; display: block;" src="images/isef/CBIO026_1.PNG" alt="Random Decay Simulation">
+                    <img style="width: 50%; margin: auto; display: block;" src="images/isef/CBIO026_1.png" alt="Random Decay Simulation">
                     <div style="color: black; bottom: -95px;" class="carousel-caption d-none d-md-block">
                         <h2>Random Decay Simulation</h2>
                     </div>
                   </div>
 
                   <div class="carousel-item"">
-                    <img style="width: 49.2%; margin: auto; display: block;" src="images/isef/CBIO026_2.PNG" alt="Custom Simulation">
+                    <img style="width: 49.2%; margin: auto; display: block;" src="images/isef/CBIO026_2.png" alt="Custom Simulation">
                     <div style="color: black; bottom: -95px;" class="carousel-caption d-none d-md-block">
                         <h2>Custom Simulation</h2>
                     </div>
@@ -148,7 +148,7 @@
                   </div>
 
                   <div class="carousel-item"">
-                    <img style="width: 40%; margin: auto; display: block;" src="images/isef/EGPH024T_2.PNG" alt="Final CAD Model (Inner View)">
+                    <img style="width: 40%; margin: auto; display: block;" src="images/isef/EGPH024T_2.png" alt="Final CAD Model (Inner View)">
                     <div style="color: black; bottom: -95px;" class="carousel-caption d-none d-md-block">
                         <h2>Final CAD Model (Inner View)</h2>
                     </div>
