Pull back upload, could not fix yet

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <div class="row" style="align-items: flex-end;">
                         <h5 class="card-title" style="color: black; width: 65%; margin: 5%;">Intel International Science
                             & Engineering Fair</h5>
-                        <a href="ISEF.html" class="stretched-link"></a>
+                        <a href="in-construction-sign.html" class="stretched-link"></a>
                         <span class="fas fa-arrow-circle-right fa-2x col-sm"
                             style="color: black; width: 20%; margin-left: 5%;"></span>
                     </div>
