--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
         gtag('config', 'UA-170686277-1');
     </script>
 
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#2d89ef">
+    <meta name="theme-color" content="#ffffff">
+
     <title>Norman A. Toro Vega</title>
     <meta name="description"
         content="Norman A. Toro Vega is an aspiring product manager, innovator, software developer and changemaker. Computer Engineering & Technology Innovation student at Boston University leading the next...">
