--- a/about.html
+++ b/about.html
@@ -141,6 +141,7 @@
                     <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
                     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
                     <a class="resumeButton" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/normant/30-minute'});return false;">Schedule time with me</a>
+                    <button class="resumeButton" onclick="window.location.href='itms-services://?action=download-manifest&url=https://normant.me/manifest.plist'">TerrierCheck App</button>
                     <!-- Calendly link widget end -->
                 </div>
                 
