--- a/index.html
+++ b/index.html
@@ -140,6 +140,29 @@
         </div>
 
         <div class="row" style="justify-content: center;">
+
+        <div class="card shadow">
+            <img class="card-img-top" src="images/veranahealth.webp" alt="Verana Health Logo">
+            <div class="card-body container-fluid" style="display: flex;">
+                <div class="row" style="align-items: flex-end;">
+                    <h5 class="card-title" style="color: black; width: 60%; margin: 5%;">Verana Health Fall 2020 Internship</h5>
+                    <a href="in-construction-sign.html" class="stretched-link"></a>
+                    <span class="fas fa-arrow-circle-right fa-2x col-sm"
+                        style="color: black; width: 20%; margin-left: 5%;"></span>
+                </div>
+            </div>
+        </div>
+        <div class="card shadow">
+            <img class="card-img-top" src="images/terriercheck.png" alt="TerrierCheck Logo">
+            <div class="card-body container-fluid" style="display: flex;">
+                <div class="row" style="align-items: flex-end;">
+                    <h5 class="card-title" style="color: black; width: 60%; margin: 5%;">TerrierCheck SwiftUI App</h5>
+                    <a href="https://github.com/benlaskaris/COVID_App" class="stretched-link"></a>
+                    <span class="fas fa-arrow-circle-right fa-2x col-sm"
+                        style="color: black; width: 20%; margin-left: 5%;"></span>
+                </div>
+            </div>
+        </div>
             <div class="card shadow" style="background-color: black !important;">
                 <img class="card-img-top" src="images/spark-logo-square.png" alt="Spark! Fellowship Logo">
                 <div class="card-body container-fluid" style="display: flex;">
