--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="row" style="justify-content: center;">
 
         <div class="card shadow">
-            <img class="card-img-top" src="images/veranahealth.webp" alt="Verana Health Logo">
+            <img class="card-img-top" src="images/veranahealth.png" alt="Verana Health Logo">
             <div class="card-body container-fluid" style="display: flex;">
                 <div class="row" style="align-items: flex-end;">
                     <h5 class="card-title" style="color: black; width: 60%; margin: 5%;">Verana Health Fall 2020 Internship</h5>
